<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentationKaverdram.addNewsFragmentKaverdarm.AddNewsFragmentKaverdarm"
    android:background="@drawable/main_bg_night_kavedarm">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="16dp"
        android:layout_height="20dp"
        android:id="@+id/btnGoBackAddNewsKaverdram"
        android:background="@drawable/back_arrow_kaverdarm"
        app:layout_constraintTop_toTopOf="@id/tvAddNewsTitleKaverdarm"
        app:layout_constraintBottom_toBottomOf="@id/tvAddNewsTitleKaverdarm"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvAddNewsTitleKaverdarm"
        android:text="@string/ddNewsKaverdarm"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:fontFamily="@font/roboto_medium_kaverdam"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnGoBackAddNewsKaverdram"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addNewsLayoutKaverdarm"
        app:layout_constraintTop_toBottomOf="@id/btnGoBackAddNewsKaverdram"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp">
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/addNewsLayoutKaverdarm"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="24dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutAddTextKaverdarm">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/btnAddImgForNewsKaverdarm"
                android:background="@drawable/add_news_btn_kaverdram"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/viewLineKaverdarm"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#2F2F2F"
                app:layout_constraintTop_toBottomOf="@id/btnAddImgForNewsKaverdarm"
                android:layout_marginTop="16dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvAddTitleForArticleKaverdam"
                android:text="@string/addTitleForArticleKaverdam"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:fontFamily="@font/roboto_medium_kaverdam"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewLineKaverdarm"
                android:layout_marginTop="12dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/edtAddTitleKaverdarm"
                android:background="@drawable/bg_edt_kaverdarm"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_regular_kaverdam"
                android:padding="8dp"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/tvAddTitleForArticleKaverdam"
                android:layout_marginTop="4dp"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvAddDescriptionForArticleKaverdam"
                android:text="@string/addDescriptionForArticleKaverdam"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:fontFamily="@font/roboto_medium_kaverdam"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtAddTitleKaverdarm"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/edtAddDescriptionKaverdarm"
                android:background="@drawable/bg_edt_kaverdarm"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="8dp"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular_kaverdam"
                app:layout_constraintTop_toBottomOf="@id/tvAddDescriptionForArticleKaverdam"
                android:layout_marginTop="4dp"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvAddContentForArticleKaverdam"
                android:text="@string/addContentForArticleKaverdam"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:fontFamily="@font/roboto_medium_kaverdam"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtAddDescriptionKaverdarm"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/edtAddContentKaverdarm"
                android:background="@drawable/bg_edt_kaverdarm"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_regular_kaverdam"
                android:padding="8dp"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/tvAddContentForArticleKaverdam"
                app:layout_constraintBottom_toTopOf="@id/btnCreateNewsKaverdarm"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btnCreateNewsKaverdarm"
                android:background="@drawable/continue_btn_check_kavedarm"
                android:layout_marginHorizontal="60dp"
                android:text="@string/createNewsKaverdarm"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium_kaverdam"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>